# telegram_scrapper

./: .env.sample  .flake8  .gitignore  .pylintrc  Dockerfile  README.md  add_env.sample.ps1  docker-compose.yml  docker-compose_db_only.yml  pyproject.toml
app/src/: __init__.py  main.py
app/src/utils/: __init__.py  attachment_handler.py  config.py  db.py  image_handler.py  tg_client.py
app/tests/: __init__.py
notebooks/: test.ipynb
sql/: init.sql
