[tool.poetry]
name = "telegram-scrapper"
version = "0.1.0"
description = ""
authors = ["kolommik <mikhail.kolomasov@gmail.com>"]
readme = "README.md"
packages = [{include = "telegram_scrapper"}]

[tool.poetry.dependencies]
python = "^3.9"
Telethon = "^1.26.1"


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
mypy = "^0.991"
pylint = "^2.15.10"
ipykernel = "^6.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
